--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 	name = Corentin Rossignon
-	email = corentin.rossignon@total.com
+	email = corossig@gmail.com
 [branch "master"]
 	remote = origin
 	merge = refs/heads/master
